<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.nomencurator</groupId>
  <artifactId>taxonaut</artifactId>
  <packaging>jar</packaging>
  <version>3.1.8</version>
  <name>taxonaut</name>
  <url>http://nomencurator.org</url>

<!-- last updated on 03 Dec 2019-->

  <properties>
    <maven.test.skip>true</maven.test.skip>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

<!-- check current version under http://repository.gbif.org/content/groups/gbif -->
<!-- last checked on 20191202 -->
    <checklistbank-ws-client.version>2.81</checklistbank-ws-client.version>
    <dwc-api.version>1.23</dwc-api.version>
    <gbif-api.version>0.100</gbif-api.version>
    <gbif-common-ws.version>0.47</gbif-common-ws.version>
<!--    <gbif-name-parser.version>3.41</gbif-name-parser.version> -->

    <bval-jsr303.version>0.5</bval-jsr303.version>
    <findbugs-jsr305.version>2.0.3</findbugs-jsr305.version>
    <guava.version>18.0</guava.version>
    <hamcrest.version>1.3</hamcrest.version>
    <jackson.version>1.9.13</jackson.version>
<!--
    <jackson.version>2.4.1</jackson.version>
-->
    <junit.version>4.11</junit.version>
    <logback.version>1.0.13</logback.version>
    <mockito.version>1.9.5</mockito.version>
    <slf4j.version>1.7.7</slf4j.version>
    <logback.version>1.0.7</logback.version>
    <jaxrpc.version>1.1.3</jaxrpc.version>
    <stax-api.version>1.0-2</stax-api.version>
    <!--    <axis.version>1.4</axis.version> -->
        <axis2.version>1.7.9</axis2.version>
    <validation-api.version>1.1.0.Final</validation-api.version>
    <activation.version>1.1.1</activation.version>
    <jts.version>1.13</jts.version>
    <commons-lang3.version>3.4</commons-lang3.version>
    <jersey-client.version>1.18.1</jersey-client.version>
  </properties>

  <dependencies>
<!--
    <dependency>
      <groupId>com.sun.jersey</groupId>
      <artifactId>jersey-client</artifactId>
      <version>${jersey-client.version}</version>
    </dependency>
-->

<!-- GBIF API doesn't work with Jackson 2.x
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>2.4.1</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>2.4.1</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.4.1</version>
    </dependency>
-->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
<!--      <version>1.14.4</version> -->
      <version>1.18.8</version>      
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.gbif</groupId>
      <artifactId>gbif-api</artifactId>
      <version>${gbif-api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.gbif</groupId>
      <artifactId>gbif-common-ws</artifactId>
      <version>${gbif-common-ws.version}</version>
    </dependency>
<!--
    <dependency>
      <groupId>org.gbif</groupId>
      <artifactId>name-parser</artifactId>
      <version>${gbif-name-parser.version}</version>
    </dependency>
    <dependency>
      <groupId>org.gbif</groupId>
      <artifactId>dwc-api</artifactId>
      <version>${dwc-api.version}</version>
    </dependency>
-->
    <dependency>
      <groupId>org.gbif.checklistbank</groupId>
      <artifactId>checklistbank-ws-client</artifactId>
      <version>${checklistbank-ws-client.version}</version>
    </dependency>
<!--
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
      <scope>test</scope>
    </dependency>
-->
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>${findbugs-jsr305.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>${validation-api.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.activation</groupId>
      <artifactId>activation</artifactId>
      <version>${activation.version}</version>
      <scope>provided</scope>
    </dependency>
<!--
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3.version}</version>
    </dependency>
-->

    <!-- Required by Polygon search and validation -->
    <!-- 
    <dependency>
      <groupId>com.vividsolutions</groupId>
      <artifactId>jts</artifactId>
      <version>${jts.version}</version>
    </dependency>
    -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.bval</groupId>
      <artifactId>bval-jsr303</artifactId>
      <version>${bval-jsr303.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.codehaus.jackson</groupId>
      <artifactId>jackson-core-asl</artifactId>
      <version>${jackson.version}</version>
    </dependency>
<!--
    <dependency>
	<groupId>org.codehaus.jackson</groupId>
	<artifactId>jackson-jaxrs</artifactId>
      <version>${jackson.version}</version>
    </dependency>
-->
<!--
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>3.0.6.RELEASE</version>
    </dependency>
-->
    <dependency>
      <groupId>org.codehaus.jackson</groupId>
      <artifactId>jackson-mapper-asl</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-core</artifactId>
      <version>${hamcrest.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <!--
    <dependency>
      <groupId>javax.xml</groupId>
      <artifactId>jaxrpc-api</artifactId>
      <version>${jaxrpc.version}</version>
    </dependency>
    -->
    <dependency>
      <groupId>javax.xml.stream</groupId>
      <artifactId>stax-api</artifactId>
      <version>${stax-api.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <!--
      <groupId>org.apache.axis</groupId>
      <artifactId>axis</artifactId>
      <version>${axis.version}</version>
      -->
      <groupId>org.apache.axis2</groupId>
      <artifactId>axis2-kernel</artifactId>
      <version>${axis2.version}</version>
    </dependency>
<!--    
<dependency>
    <groupId>org.apache.axis</groupId>
    <artifactId>axis-jaxrpc</artifactId>
   <version>1.4</version>
</dependency>
-->
<dependency>
<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
    <groupId>org.apache.poi</groupId>
    <artifactId>poi</artifactId>
    <version>3.14</version>
</dependency>
<dependency>
<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
    <groupId>org.apache.poi</groupId>
    <artifactId>poi-ooxml</artifactId>
    <version>3.14</version>
</dependency>
 </dependencies>

  <repositories>
    <repository>
      <id>mavenrepositorycom</id>
      <url>https://mvnrepository.com/</url>
    </repository>
    <repository>
      <id>mavenrepo</id>
      <url>http://repo.maven.apache.org/maven2</url>
    </repository>
    <repository>
      <id>projectlombok.org</id>
      <url>http://projectlombok.org/mavenrepo</url>
    </repository>
    <repository>
      <id>gbif-all</id>
      <url>http://repository.gbif.org/content/groups/gbif</url>
    </repository>
  </repositories>

  <build>
    <resources>
      <resource>
	<targetPath>org/nomencurator/resources</targetPath>
	<directory>src/main/java/org/nomencurator/resources</directory>
	<includes>
	  <include>**/*.xml</include>
	  <include>**/*.properties</include>
	</includes>
      </resource>
      <resource>
	<targetPath>org/nomencurator/gui/swing</targetPath>
	<directory>src/main/java/org/nomencurator/gui/swing</directory>
	<includes>
	  <include>**/*.xml</include>
	  <include>**/*.properties</include>
	</includes>
      </resource>
      <resource>
	<targetPath>org/nomencurator/gui/swing/table</targetPath>
	<directory>src/main/java/org/nomencurator/gui/swing/table</directory>
	<includes>
	  <include>**/*.xml</include>
	</includes>
      </resource>
      <resource>
	<targetPath>org/nomencurator/gui/swing/tree</targetPath>
	<directory>src/main/java/org/nomencurator/gui/swing/tree</directory>
	<includes>
	  <include>**/*.xml</include>
	  <include>**/*.properties</include>
	</includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-compiler-plugin</artifactId>
	<version>3.1</version>
	<configuration>
	  <!-- 1.7? -->
	  <source>1.8</source>
	  <target>1.8</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
	  <encoding>UTF-8</encoding>
<!--	  <useIncrementalCompilation>true</useIncrementalCompilation> -->
	  <compilerArgs>
	    <arg>-Xlint</arg>
- 	    <arg>-Xdiags:verbose</arg>
	  </compilerArgs>
	</configuration>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-jar-plugin</artifactId>
	<version>2.5</version>
	<configuration>
	  <archive>
            <manifest>
              <mainClass>org.nomencurator.gui.swing.Taxonaut</mainClass>
            </manifest>
          </archive>
	</configuration>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-assembly-plugin</artifactId>
	<version>2.5.2</version>
	<configuration>
          <finalName>Taxonaut-${project.version}</finalName>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <mainClass>org.nomencurator.gui.swing.Taxonaut</mainClass>
            </manifest>
          </archive>
	</configuration>
	<executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal> <!-- goals == mojos -->
            </goals>
          </execution>
	</executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.3</version>
        <executions>
          <execution>
            <goals>
              <goal>java</goal>
            </goals>
          </execution>
        </executions>
	<configuration>
	  <killAfter>-1</killAfter>
          <mainClass>org.nomencurator.gui.swing.Taxonaut</mainClass>
	</configuration>
      </plugin>
    </plugins>
  </build>

</project>
